package com.paxtech.utime.platform.reservations.domain.model.queries;

public record GetReservationByIdQuery(Long id){
}
